<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_add_task"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorPrimary"
        android:text="@string/add_task"
        android:textColor="@color/colorWhite"
        android:gravity="center_vertical"
        android:paddingLeft="15dp"
        style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
    <ImageButton
        android:id="@+id/btnDelete"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@color/colorPrimary"
        android:src="@drawable/ic_delete"
        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@+id/btnClose"
        android:layout_toStartOf="@+id/btnClose" />
    <ImageButton
        android:id="@+id/btnClose"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@color/colorPrimary"
        android:src="@drawable/ic_close"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:scrollbars="none"
        android:layout_weight="1"
        android:layout_below="@+id/tvTitle"
        android:layout_above="@+id/btnSave">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/etTitle"
                    android:layout_height="60dp"
                    android:layout_width="0dp"
                    android:layout_weight="100"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:gravity="center_vertical"
                    android:lines="1"
                    android:inputType="textShortMessage"
                    android:hint="@string/enter_title" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >
                <EditText
                    android:id="@+id/etDescription"
                    android:layout_height="60dp"
                    android:layout_width="0dp"
                    android:layout_weight="100"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:gravity="center_vertical"
                    android:maxLines="2"
                    android:hint="@string/enter_description" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
                <TextView
                    android:text="@string/priority"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="15dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="10dp"
                    android:gravity="center_vertical"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
                    android:id="@+id/textView3" />
                <RadioGroup
                    android:id="@+id/rgTaskPriority"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">
                    <RadioButton
                        android:id="@+id/rbLowPriority"
                        android:text="@string/priority_low"
                        android:checked="true"
                        android:textColor="@color/colorGreen"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />
                    <RadioButton
                        android:id="@+id/rbMediumPriority"
                        android:text="@string/priority_medium"
                        android:textColor="@color/colorOrange"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />
                    <RadioButton
                        android:id="@+id/rbHighPriority"
                        android:text="@string/priority_high"
                        android:textColor="@color/colorRed"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />
                </RadioGroup>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
                <TextView
                    android:text="@string/due_date_colon_string"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="15dp"
                    android:layout_marginStart="15dp"
                    android:gravity="center_vertical"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
                    android:id="@+id/textView4" />
                <DatePicker
                    android:id="@+id/dpDueDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:calendarViewShown="false"
                    android:layout_marginEnd="15dp"
                    android:layout_marginRight="15dp"
                    android:datePickerMode="spinner" />
            </TableRow>
        </TableLayout>
    </ScrollView>
    <Button
        android:id="@+id/btnSave"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorAccent"
        android:layout_alignParentBottom="true"
        android:text="@string/btn_add_task"
        android:textStyle="bold"
        android:textSize="15sp"
        android:textColor="@color/colorWhite" />
</RelativeLayout>
